--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -8,7 +8,7 @@ on:
         description: 'Version to release'
         required: true
       provider:
-        type: string
+        type: choice
         description: 'Provider to release'
         required: true
         options:
