--- a/provider-models/crossplane-provider-upjet-azuread/pom.xml
+++ b/provider-models/crossplane-provider-upjet-azuread/pom.xml
@@ -15,6 +15,7 @@
     <version>${modelrevision}</version>
     <properties>
         <modelrevision>1.0.0-SNAPSHOT</modelrevision>
+        <maven.javadoc.skip>false</maven.javadoc.skip>
     </properties>
 
     <!-- DEPENDENCIES -->
