--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -59,5 +59,5 @@ jobs:
         run: |
           gh release create "$provider-$tag" \
               --repo="$GITHUB_REPOSITORY" \
-              --title="$provider--v${tag#v}" \
+              --title="$provider-v${tag#v}" \
               --target "$GITHUB_SHA"
