--- a/.github/workflows/maven-release-provider-model.yaml
+++ b/.github/workflows/maven-release-provider-model.yaml
@@ -14,6 +14,10 @@ on:
         options:
           - provider-upjet-azure
           - provider-upjet-azuread
+          - provider-upjet-aws
+          - provider-upjet-gcp
+          - provider-upjet-github
+          - provider-terraform
 
 
 jobs:
